--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.1",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.7"
+    "@types/react-scroll": "^1.8.7",
+    "@types/react-slick": "^0.23.10"
   }
 }
