--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
+    "i18next": "^23.2.6",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.0.1",
     "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
